load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "binder",
    srcs = glob([
        "*.cpp",
    ]),
    hdrs = glob([
        "include/*.h",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//src/binder/expression:expression_implementations",
        "//src/binder/query",
        "//src/function:function_binder",
        "//src/function/boolean:vector_boolean_operations",
        "//src/function/cast:vector_cast_operations",
        "//src/function/comparison:vector_comparison_operations",
        "//src/function/null:vector_null_operations",
        "//src/function/string:vector_string_operations",
        "//src/parser/expression:parsed_expression_implementations",
        "//src/parser/query",
        "//src/catalog:catalog",
    ],
)
