load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "binder",
    srcs = glob([
        "*.cpp",
        "bind/*.cpp",
    ]),
    hdrs = glob([
        "include/*.h",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//src/binder/bound_copy_csv",
        "//src/binder/bound_ddl",
        "//src/binder/expression:expression_implementations",
        "//src/binder/query",
        "//src/catalog",
        "//src/function/boolean:vector_boolean_operations",
        "//src/function/cast:vector_cast_operations",
        "//src/function/null:vector_null_operations",
        "//src/parser/copy_csv",
        "//src/parser/ddl",
        "//src/parser/expression:parsed_expression_implementations",
        "//src/parser/query",
    ],
)
