load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "catalog",
    srcs = glob([
        "*.cpp",
    ]),
    hdrs = glob([
        "include/*.h",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:configs",
        "//src/common:ser_deser",
        "//src/common/types",
        "//src/function:built_in_vector_operations",
        "//src/function/aggregate:built_in_aggregate_functions",
        "@gabime_spdlog",
        "@nlohmann_json",
    ],
)
