load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "catalog_structs",
    srcs = [],
    hdrs = glob([
        "include/catalog_structs.h",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/types",
    ],
)

cc_library(
    name = "catalog",
    srcs = glob([
        "catalog.cpp",
    ]),
    hdrs = glob([
        "include/catalog.h",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/binder/bound_create_node_clause",
        "//src/common:configs",
        "//src/common:ser_deser",
        "//src/common/types",
        "//src/function:built_in_vector_operations",
        "//src/function/aggregate:built_in_aggregate_functions",
        "@gabime_spdlog",
        "@nlohmann_json",
    ],
)
