load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "catalog_structs",
    srcs = [
        "catalog_structs.cpp",
    ],
    hdrs = [
        "include/catalog_structs.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:configs",
        "//src/common/types",
    ],
)

cc_library(
    name = "catalog",
    srcs = [
        "catalog.cpp",
    ],
    hdrs = [
        "include/catalog.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "catalog_structs",
        "//src/binder/bound_create_node_clause",
        "//src/common:configs",
        "//src/common:ser_deser",
        "//src/function:built_in_vector_operations",
        "//src/function/aggregate:built_in_aggregate_functions",
        "@gabime_spdlog",
        "@nlohmann_json",
    ],
)
