load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "data_chunk",
    srcs = [
        "data_chunk/data_chunk.cpp",
    ],
    hdrs = [
        "include/data_chunk/data_chunk.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "vector",
    ],
)

cc_library(
    name = "vector",
    srcs = [
        "compression_scheme.cpp",
        "vector/node_vector.cpp",
        "vector/string_buffer.cpp",
        "vector/value_vector.cpp",
        "vector/vector_state.cpp",
    ],
    hdrs = [
        "include/compression_scheme.h",
        "include/vector/node_vector.h",
        "include/vector/string_buffer.h",
        "include/vector/value_vector.h",
        "include/vector/vector_state.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "expression_type",
        "memory_manager",
        "operations",
        "types",
    ],
)

cc_library(
    name = "vector_operations",
    srcs = [
        "vector/operations/vector_arithmetic_operations.cpp",
        "vector/operations/vector_boolean_operations.cpp",
        "vector/operations/vector_cast_operations.cpp",
        "vector/operations/vector_comparison_operations.cpp",
        "vector/operations/vector_hash_operations.cpp",
        "vector/operations/vector_node_id_operations.cpp",
    ],
    hdrs = [
        "include/vector/operations/executors/binary_operation_executor.h",
        "include/vector/operations/executors/unary_operation_executor.h",
        "include/vector/operations/vector_arithmetic_operations.h",
        "include/vector/operations/vector_boolean_operations.h",
        "include/vector/operations/vector_cast_operations.h",
        "include/vector/operations/vector_comparison_operations.h",
        "include/vector/operations/vector_hash_operations.h",
        "include/vector/operations/vector_node_id_operations.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "operations",
        "vector",
    ],
)

cc_library(
    name = "operations",
    srcs = [],
    hdrs = [
        "include/operations/arithmetic_operations.h",
        "include/operations/boolean_operations.h",
        "include/operations/comparison_operations.h",
        "include/operations/decompress_operations.h",
        "include/operations/hash_operations.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "types",
    ],
)

cc_library(
    name = "statement_type",
    hdrs = [
        "include/statement_type.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "csv_reader",
    srcs = ["csv_reader/csv_reader.cpp"],
    hdrs = ["include/csv_reader/csv_reader.h"],
    visibility = ["//visibility:public"],
    deps = [
        "configs",
        "types",
    ],
)

cc_library(
    name = "utils",
    srcs = [
        "assert.cpp",
        "exception.cpp",
        "file_utils.cpp",
        "utils.cpp",
    ],
    hdrs = [
        "include/assert.h",
        "include/exception.h",
        "include/file_utils.h",
        "include/utils.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@gabime_spdlog",
        "@martinus_robin_hood_hashing",
    ],
)

cc_library(
    name = "types",
    srcs = [
        "date.cpp",
        "gf_string.cpp",
        "literal.cpp",
        "types.cpp",
        "value.cpp",
    ],
    hdrs = [
        "include/cast_helpers.h",
        "include/date.h",
        "include/gf_string.h",
        "include/literal.h",
        "include/types.h",
        "include/value.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "utils",
    ],
)

cc_library(
    name = "configs",
    hdrs = [
        "include/configs.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "expression_type",
    srcs = [
        "expression_type.cpp",
    ],
    hdrs = [
        "include/expression_type.h",
    ],
    visibility = ["//visibility:public"],
    deps = [],
)

cc_library(
    name = "memory_manager",
    srcs = [
        "memory_manager.cpp",
    ],
    hdrs = [
        "include/memory_manager.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "configs",
    ],
)

cc_library(
    name = "ser_deser",
    hdrs = [
        "include/ser_deser.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "utils",
    ],
)

cc_library(
    name = "timer",
    hdrs = [
        "include/timer.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "profiler",
    srcs = [
        "metric.cpp",
        "profiler.cpp",
    ],
    hdrs = [
        "include/metric.h",
        "include/profiler.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "timer",
    ],
)

cc_library(
    name = "functions",
    hdrs = [
        "include/function.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "types",
    ],
)
